# ie-mcp

./: .gitignore  LICENSE  README.md  ie_mcp.py  pyproject.toml  requirements.txt
tests/: test_interaction_mode.py  test_session_ownership.py
